# dotEyes

./: .cursorrules  CHANGES.md  LICENSE  README.md  bun.lockb  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: renovate.json
.github/workflows/: release.yml  test-build.yml
llm-doc/: project-instruction.md
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture.rs  commands.rs  lib.rs
src/lib/: commands.svelte.ts  index.ts  rust.svelte.ts
src/lib/components/ui/card/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/recording/: +page.svelte
