[package]
name = "app"
version = "1.0.0"
description = "A simple desktop application template combining Tauri 2 with Svelte 5 and shadcn-svelte with a basic ci/cd implemented."
authors = ["Alysonhower Veras Vieira"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# tauri-plugin-shell = "2" # uncomment to use shell
serde_json = "1"
serde = { version = "1", features = ["derive"] }
once_cell = "1.19.0"  # Ajoutez cette ligne avec les autres dépendances

# Imports des librairies pour le recording
ffmpeg-next = "6.1.0"  # Bindings Rust pour FFmpeg
x11-dl = "2.21.0"      # Bindings dynamiques pour X11/Xlib
dirs = "5.0"           # Pour obtenir le chemin du dossier home
chrono = "0.4"        # Pour générer les timestamps
